web/deploy/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: fclipboard
  labels:
    name: fclipboard
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/fclipboard/(.*) /$1 break;
spec:
  rules:
    - host: fclipboard.shoppon.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: fclipboard.shoppon.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: /fclipboard
            backend:
              service:
                name: web
                port:
                  number: 80
